# paxx

./: .clang-format  .cmake-format.json  .gitignore  .pre-commit-config.yaml  README.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cxx
src/cli/src/: args.h  build-cli.cxx  build-cli.h  build-cli.hxx  cli.cxx  cli.hxx  handle-args.cxx  handle-args.h  handle-args.hxx  main.cxx
src/cli/test/: cli-help-test.cxx  cli-show-test.cxx  cli-test.cxx  cli-version-test.cxx
src/cmake/: compiler-options.cmake  conan-dependencies.cmake  conan-find-dependencies.cmake  conan-setup.cmake  configuration.cmake  functions.cmake  system-dependencies.cmake
src/commands/: CMakeLists.txt
src/commands/copy/: CMakeLists.txt
src/commands/copy/include/copy/: copy.h  copy.hxx
src/commands/copy/src/: copy.cxx
src/commands/delete/: CMakeLists.txt
src/commands/delete/include/delete/: delete.h  delete.hxx
src/commands/delete/src/: delete.cxx
src/commands/edit/: CMakeLists.txt
src/commands/edit/include/edit/: edit.h  edit.hxx
src/commands/edit/src/: edit.cxx
src/commands/find/: CMakeLists.txt
src/commands/find/include/find/: find.h  find.hxx
src/commands/find/src/: find.cxx
src/commands/generate/: CMakeLists.txt
src/commands/generate/include/generate/: generate.h  generate.hxx
src/commands/generate/src/: generate.cxx
src/commands/git/: CMakeLists.txt  TODO
src/commands/git/include/git/: git.h  git.hxx
src/commands/git/src/: git.cxx
src/commands/grep/: CMakeLists.txt
src/commands/grep/include/grep/: grep.h  grep.hxx
src/commands/grep/src/: grep.cxx
src/commands/info/: CMakeLists.txt
src/commands/info/include/info/: info.h  info.hxx
src/commands/info/src/: info.cxx
src/commands/init/: CMakeLists.txt
src/commands/init/include/init/: init.h  init.hxx
src/commands/init/src/: init.cxx
src/commands/insert/: CMakeLists.txt
src/commands/insert/include/insert/: insert.h  insert.hxx
src/commands/insert/src/: insert.cxx
src/commands/list/: CMakeLists.txt
src/commands/list/include/list/: list.h
src/commands/list/src/: list.cxx
src/commands/remove/: CMakeLists.txt
src/commands/remove/include/remove/: remove.hxx
src/commands/remove/src/: remove.cxx
src/commands/rename/: CMakeLists.txt
src/commands/rename/include/rename/: rename.h  rename.hxx
src/commands/rename/src/: rename.cxx
src/commands/show/: CMakeLists.txt
src/commands/show/include/show/: show.h  show.hxx
src/commands/show/src/: qr.cxx  qr.h  qr.hxx  show-tree.cxx  show-tree.h  show.cxx  symbols.h  tree-builder.cxx  tree-builder.h  tree-writer.cxx  tree-writer.h  tree.cxx  tree.h  types.h
src/commands/show/test/: tree-test.cxx  tree-writer-test.cxx
src/common/: CMakeLists.txt
src/common/include/common/: args.h  args.hxx  error.hxx  expected.hxx  find-password-store.h  find-password-store.hxx  pgp-decryptor.h  pgp-decryptor.hxx  tree-builder.h  tree.hxx  types.h  types.hxx
src/common/src/: error.cxx  fs-directory-entry.cxx  fs-directory-entry.hxx  fs-directory-iterator-traits.hxx  pgp-decryptor.cxx  symbols.h  symbols.hxx  tree-builder.cxx  tree-builder.hxx  tree-walker.cxx  tree-walker.hxx  tree-writer.cxx  tree-writer.h  tree-writer.hxx  tree.cxx
src/common/test/: fake-directory-entry.cxx  fake-directory-entry.hxx  fake-directory-iterator-traits.hxx  fake-directory-iterator.hxx  fake-directory-node.hxx  tree-walker-test.cxx  tree-writer-test.cxx
