cmake_minimum_required(VERSION 3.20)

add_subdirectory(copy)
add_subdirectory(delete)
add_subdirectory(edit)
add_subdirectory(find)
add_subdirectory(generate)
add_subdirectory(git)
add_subdirectory(grep)
add_subdirectory(init)
add_subdirectory(insert)
add_subdirectory(rename)
add_subdirectory(show)
add_subdirectory(info)
